# linkedin_crewai

./: README.md  pyproject.toml  report.txt
src/linkedin/: crew.py  main.py
src/linkedin/config/: agents.yaml  tasks.yaml
